--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <li><a href="credits.html">credits</a></li>	
 </ul>
 <h1>Introduction</h2>
-<p>vibra uI is an aPI allowing developers to create beatiful webApps faster than ever for free! see the demos page if you want to have a look at what we are talking about.</p>
+<p>vibra uI is an aPI allowing developers to create beautiful webApps faster than ever for free! see the demos page if you want to have a look at what we are talking about.</p>
 <h1 id="req">Requirements</h2>
 <h3>Scripts</h3>
 <pre style="font-size: 14px; font-family: source code pro; text-transform: none;">&lt;script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"&gt;&lt;/script&gt;
-&lt;script src="https://vibraui.netlify.app/latest.js"&gt;&lt;/script&gt;</pre>
+&lt;script src="https://shaurya1709.github.io/vibra-UI/latest.js"&gt;&lt;/script&gt;</pre>
 <h3>Styles</h3>
 <pre style="font-size: 14px; font-family: source code pro; text-transform: none;">@import url(https://vibraui.netlify.app/api.css);</pre>
 <h3>configuration</h3>
