--- a/api.html
+++ b/api.html
@@ -1,52 +1,109 @@
 <!DOCTYPE html>
 <title>Vibra UI</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
 <h1 class="logo">Vibra uI</h1>
-<ul class="navbar">
+<ul class="navbar sticky">
   <li><a href="index.html">Home</a></li>
   <li><a id="active">API Documentation</a></li>
-  <li><a href="design.html">design</a></li>	
+  <li><a href="design.html">design</a></li>
   <li><a href="demo.html">Demos</a></li>
   <li><a href="credits.html">credits</a></li>
 </ul>
 
 <h1 class="head">aPI documentation</h1>
 <h1>cSS configuration</h1>
-<pre style="font-family: source code pro; font-size: 14px; text-transform: none;">
+<pre class="code">
 :root {
---main-color: /* the main color. used for things like backgrounds */
---accent-color: /* the accent color. used for things like menubar backgrounds */
---font-color: /* the color of the font used across the webpage */
---font-color-alternate: /* an alternate font color used for menubar hovers and active menubar urls */
---font: /* the font family to be used across the webpage */
---page-margin: /* the margin used by the page body */
---text-case-filter: /* text casing filters. possible values are capitalize, lowercase, uppercase and none */
---scroll-style: /* set smooth scrolling for anchors leading to other elements on the page. possible values are smooth, auto */
+	--main-color: /* the main color. used for things like backgrounds */
+	--accent-color: /* the accent color. used for things like navbar backgrounds */
+	--text-color: /* the color of the font used across the webpage */
+	--text-color-alternate: /* an alternate font color used for navbar hovers, active navbar urls and button text */
+	--font: /* the font family to be used across the webpage */
+	--page-margin: /* the margin used by the page body */
+	--text-case-filter: /* text casing filters. possible values are capitalize, lowercase, uppercase and none */
+	--scroll-style: /* set smooth scrolling for anchors leading to other elements on the page. possible values are smooth, auto */
 }
 </pre>
 <h1>classes</h2>
 <h2>navbar</h3>
-<p>specifies a navbar.</p>
-<p></p>
-<p><a href="demo.html#menubar">click here for example</a></p>
+<p>specifies a <span class="code">navbar</span>.</p>
+<p><a href="demo.html#navbar">click here for example</a></p>
 <p>syntax:</p>
-<pre style="font-family: source code pro; font-size: 14px; text-transform: none;">
+<pre class="code">
 &lt;ul class="navbar"&gt;
-  &lt;li>&lt;a href="page 1 url">Page 1&lt;/a&gt;&lt;/li&gt;
-  &lt;li&gt;&lt;a id="active"&gt;Page 2&lt;/a&gt;&lt;/li&gt;
+	&lt;li>&lt;a href="page 1 url">Page 1&lt;/a&gt;&lt;/li&gt;
+	&lt;li&gt;&lt;a id="active"&gt;Page 2&lt;/a&gt;&lt;/li&gt;
 &lt;/ul&gt;
 </pre>
 <h3>active</h3>
-<p>the active iD is used inside a navbar to specify the active page and its styling.</p>
+<p>the active iD is used inside a <span class="code">navbar</span> to specify the active page and its styling.</p>
 <p>syntax:</p>
 <pre style="text-transform: none; font-family: source code pro; font-size: 14px;">&lt;li id="active"&gt;text&lt;/li&gt;</pre>
 <p class="attr">emoji by tweMoji</p>
 <h2>shadowed</h2>
 <p>adds a shadow to the element using the <span style="font-family: source code pro; font-size: 14px; text-transform: none;">box-shadow</span> property</p>
+<h1>class pairs</h1>
+<p>class pairs combine two or more <span class="code">classes</span> to style the element differently.</p>
+<h2>glow</h2>
+<p>adds a glow effect to the element on <span class="code">hover</span></p>
+<h3>Applicable Elements</h3>
+<p class="nocaps">button, navbar</p>
+<h3>code</h3>
+<pre class="code">
+&lt;ul class="navbar glow"&gt;
+	&lt;li>&lt;a href="page 1 url">Page 1&lt;/a&gt;&lt;/li&gt;
+	&lt;li&gt;&lt;a id="active"&gt;Page 2&lt;/a&gt;&lt;/li&gt;
+&lt;/ul&gt;
+</pre>
+<h2>sticky</h2>
+<p>makes a navbar or button sticky</p>
+<h3>applicable elements</h3>
+<p class="nocaps">navbar, button</p>
+<h3>code</h3>
+<pre class="code">
+&lt;ul class="navbar sticky"&gt;
+	&lt;li>&lt;a href="page 1 url">Page 1&lt;/a&gt;&lt;/li&gt;
+	&lt;li&gt;&lt;a id="active"&gt;Page 2&lt;/a&gt;&lt;/li&gt;
+&lt;/ul&gt;
+</pre>
+<h3>additional requirements</h3>
+<h4>buttons</h4>
+<p>buttons require one of these values be different from <span class="code">auto</span></p>
+<p>top, bottom, left, right</p>
+<h2>push</h2>
+<p>adds a push effect to the element on click</p>
+<h3>applicable elements</h3>
+<p class="nocaps">navbar, button</p>
+<h2>Combining Class Pairs</h2>
+<p><span class="code">class pairs</span> can be combined as well. example -<br> a navbar with classes sticky and glow is possible! even the navigation bar on this webpage combines class pairs.</p>
+<h3>how to combine class pairs</h3>
+<p>an example to do so is a navbar. navbars are made when the <span class="code">class</span> navbar is added to a list.</p>
+<h4>example</h4>
+<p>navbar + sticky = sticky navbar.<p>navbar + glow = navbar with glow in hovered links.<p>therefore, navbar + sticky + glow = the properties of sticky and the properties of glow added to the navbar</p>
+<a href="demo.html#ccp">example</a>
+<h1>animations</h1>
+<h2>Getting Started</h2>
+<p>to use animations, just add the animation <span class="code">class</span> along with the <span class="code">class</span> for the animation required. animations are also <span class="code">class pairs</span>. an animation requires four <span class="code">classes</span>. they are <span class="code">animation</span>, <span class="code">animation</span> length, <span class="code">animation</span> type and <span class="code">animation</span> iteration count</p>
+<h2>Animation Length</h2>
+<p>possible values: <span class="code">regular, slow, slower, fast, faster</span>. can be also set using the animation-duration property</p>
+<h2>Animation Type</h2>
+<p>possible values: <span class="code">spin, fadeback</span>.</p>
+<h3>spin</h3>
+<p class="nocaps">Class: spin</p>
+<p>spins the element infinitely</p>
+<h3>fadeback</h3>
+<p class="nocaps">Class: fadeback</p>
+<p>fades the text in and out.</p>
+<h2>Animation Iteration Count</h2>
+<p>possible values: <span class="code">once, infinite</span>. can also be set using the animation-iteration-count property.</p>
 <style>
 	@import url(style.css);
 			
-	h2,h3 {text-transform: none;}
+	h2 {text-transform: none;}
+	
+	.code {font-family: source code pro; font-size: 14px; text-transform: none;}
+	
+	.nocaps {text-transform: none;}
 </style>
 <script src="latest.js"></script>
