--- a/design.html
+++ b/design.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <title>Vibra UI</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <meta charset="utf-8">
 <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
 <h1 class="logo">Vibra uI</h1>
-<ul class="navbar">
+<ul class="navbar sticky">
   <li><a href="index.html">Home</a></li>
   <li><a href="api.html">API Documentation</a></li>
   <li><a id="active">design</a></li>	
@@ -55,5 +55,5 @@ Donec pulvinar sem nec ipsum tempus, eget dapibus felis vehicula. Quisque commod
 <p class="attr">emoji by tweMoji</p>
 <script src="latest.js"></script>
 <style>
-	@import url(style.css)
+	@import url(style.css);
 </style>
