--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>Vibra UI</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
 <h1 class="logo">Vibra uI</h1>
 <ul class="navbar">
@@ -15,18 +15,18 @@
 <h1 id="req">Requirements</h2>
 <h3>Scripts</h3>
 <pre style="font-size: 14px; font-family: source code pro; text-transform: none;">&lt;script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"&gt;&lt;/script&gt;
-&lt;script src="https://shaurya1709.github.io/vibra-UI/latest.js"&gt;&lt;/script&gt;</pre>
+&lt;script src="https://shaurya1709.github.io/vibra-UI/stable.js"&gt;&lt;/script&gt;</pre>
 <h3>Styles</h3>
 <pre style="font-size: 14px; font-family: source code pro; text-transform: none;">@import url(https://vibraui.netlify.app/api.css);</pre>
 <h3>configuration</h3>
 <pre style="font-size: 14px; font-family: source code pro; text-transform: none;">
 &lt;style&gt;
 :root {
---main-color: /* the main color. used for things like backgrounds */
---accent-color: /* the accent color. used for things like menubar backgrounds */
---font-color: /* the color of the font used across the webpage */
---font-color-alternate: /* an alternate font color used for menubar hovers and active menubar urls */
---font: /* the font family to be used across the webpage */
+	--main-color: /* the main color. used for things like backgrounds */
+	--accent-color: /* the accent color. used for things like menubar backgrounds */
+	--text-color: /* the color of the font used across the webpage */
+	--text-color-alternate: /* an alternate font color used for menubar hovers and active menubar urls */
+	--font: /* the font family to be used across the webpage */
 }
 &lt;/style&gt;
 </pre>
@@ -36,7 +36,6 @@
 <p>attribution is required for twemoji.(in credits) no other attribution is required</p>
 <p class="attr">emoji by tweMoji</p>
 <script src="latest.js"></script>
-<script src="extrascript.js"></script>
 <style>
-	@import url(style.css)
+	@import url(style.css);
 </style>
