--- a/credits.html
+++ b/credits.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <title>Vibra UI</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
 <h1 class="logo">Vibra uI</h1>
-<ul class="navbar">
+<ul class="navbar glow sticky push">
   <li><a href="index.html">Home</a></li>
   <li><a href="api.html">API Documentation</a></li>
   <li><a href="design.html">design</a></li>	
