--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <pre style="font-size: 14px; font-family: source code pro; text-transform: none;">&lt;script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"&gt;&lt;/script&gt;
 &lt;script src="https://shaurya1709.github.io/vibra-UI/stable.js"&gt;&lt;/script&gt;</pre>
 <h3>Styles</h3>
-<pre style="font-size: 14px; font-family: source code pro; text-transform: none;">@import url(https://vibraui.netlify.app/api.css);</pre>
+<pre style="font-size: 14px; font-family: source code pro; text-transform: none;">@import url(https://shaurya1709.github.io/vibra-UI/api.css);</pre>
 <h3>configuration</h3>
 <pre style="font-size: 14px; font-family: source code pro; text-transform: none;">
 &lt;style&gt;
