--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <title>Vibra UI</title>
-
-<script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
-<h1 class="logo">Vibra uI</h1>
-<ul class="navbar">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
+<ul class="navbar glow sticky push">
   <li><a id="active">Home</a></li>
   <li><a href="api.html">API Documentation</a></li>
   <li><a href="design.html">design</a></li>	
   <li><a href="demo.html">Demos</a></li>
-  <li><a href="credits.html">credits</a></li>	
+  <li><a href="credits.html">credits</a></li>
+  <li><a href="addons.html">addons</a></li>	
 </ul>
 <h1>Introduction</h2>
 <p>vibra uI is an aPI allowing developers to create beautiful webApps faster than ever for free! see the demos page if you want to have a look at what we are talking about.</p>
 <h1 id="req">Requirements</h2>
-<h3>Scripts</h3>
-<pre style="font-size: 14px; font-family: source code pro; text-transform: none;">&lt;script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"&gt;&lt;/script&gt;
-&lt;script src="https://shaurya1709.github.io/vibra-UI/stable.js"&gt;&lt;/script&gt;</pre>
 <h3>Styles</h3>
-<pre style="font-size: 14px; font-family: source code pro; text-transform: none;">@import url(https://shaurya1709.github.io/vibra-UI/api.css);</pre>
+<pre style="font-size: 14px; font-family: source code pro; text-transform: none;">@import url(https://vibraui.netlify.app/api.css);</pre>
 <h3>configuration</h3>
 <pre style="font-size: 14px; font-family: source code pro; text-transform: none;">
 &lt;style&gt;
@@ -34,8 +31,7 @@
 <h2>attribution</h2>
 <h4>Please read this section carefully</h4>
 <p>attribution is required for twemoji.(in credits) no other attribution is required</p>
-<p class="attr">emoji by tweMoji</p>
-<script src="latest.js"></script>
+
 <style>
 	@import url(style.css);
 </style>
