--- a/credits.html
+++ b/credits.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <title>Vibra UI</title>
-
-<script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
-<h1 class="logo">Vibra uI</h1>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
 <ul class="navbar glow sticky push">
   <li><a href="index.html">Home</a></li>
   <li><a href="api.html">API Documentation</a></li>
   <li><a href="design.html">design</a></li>	
   <li><a href="demo.html">Demos</a></li>
-  <li><a id="active">credits</a></li>	
+  <li><a id="active">credits</a></li>
+  <li><a href="addons.html">addons</a></li>	
 </ul>
-<h1 class="head" style="text-align: justify;">credits & attribution</h1>
-<h1 class="header">attribution</h1>
-<h1>tweMoji - emoji</h1>
-<h1 class="header">credits</h1>
-<h1>shaurya singh - designer, programmer, website design</h1>
+<div>
+<img style="float: right; height: 500px; width: 500px; transform: rotate(-5deg); outline: solid #555 2px;" src="credits_pic.jpeg">
+<h1 class="head" style="text-align: justify;">credits and contact</h1>
+<h1>shaurya singh - designer, programmer</h1>
+<h1 style="text-transform: none">Contact: shauryaville@gmail.com</h1>	
+</div>	
 <style>
 	@import url(style.css);
 	
-	h1 {text-align: center;}
-	
-	.header {font-size: 5vh;}
+	h1 {display: block;}
 </style>
-<script src="latest.js"></script>
