--- a/api.html
+++ b/api.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <title>Vibra UI</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
-<h1 class="logo">Vibra uI</h1>
-<ul class="navbar sticky">
+<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
+<ul class="navbar sticky glow push">
   <li><a href="index.html">Home</a></li>
   <li><a id="active">API Documentation</a></li>
   <li><a href="design.html">design</a></li>
   <li><a href="demo.html">Demos</a></li>
   <li><a href="credits.html">credits</a></li>
+  <li><a href="addons.html">addons</a></li>	
 </ul>
 
 <h1 class="head">aPI documentation</h1>
@@ -40,7 +41,6 @@
 <p>the active iD is used inside a <span class="code">navbar</span> to specify the active page and its styling.</p>
 <p>syntax:</p>
 <pre style="text-transform: none; font-family: source code pro; font-size: 14px;">&lt;li id="active"&gt;text&lt;/li&gt;</pre>
-<p class="attr">emoji by tweMoji</p>
 <h2>shadowed</h2>
 <p>adds a shadow to the element using the <span style="font-family: source code pro; font-size: 14px; text-transform: none;">box-shadow</span> property</p>
 <h1>class pairs</h1>
@@ -106,4 +106,3 @@
 	
 	.nocaps {text-transform: none;}
 </style>
-<script src="latest.js"></script>
