--- a/api.html
+++ b/api.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>Vibra UI</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<link rel="icon" href="icon.svg">
 <h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
 <ul class="navbar sticky glow push">
   <li><a href="index.html">Home</a></li>
