--- a/design.html
+++ b/design.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <title>Vibra UI</title>
+<link rel="icon" href="icon.svg">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 
