--- a/404.html
+++ b/404.html
@@ -8,7 +8,8 @@
   <li><a href="api.html">API Documentation</a></li>
   <li><a href="design.html">design</a></li>	
   <li><a href="demo.html">Demos</a></li>
-  <li><a href="credits.html">credits</a></li>	
+  <li><a href="credits.html">credits</a></li>
+  <li><a href="addons.html">addons</a></li>	
 </ul>
 <h1 class="head">Error 404</h1>
 <h1>the page you were looking for was not found</h1>
