--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <p>vibra uI is an aPI allowing developers to create beautiful webApps faster than ever for free! see the demos page if you want to have a look at what we are talking about.</p>
 <h1 id="req">Requirements</h2>
 <h3>Styles</h3>
-<pre style="font-size: 14px; font-family: source code pro; text-transform: none;">@import url(https://vibraui.netlify.app/api.css);</pre>
+<pre style="font-size: 14px; font-family: source code pro; text-transform: none;">@import url(https://shaurya1709.github.io/vibra-UI/api.css);</pre>
 <h3>configuration</h3>
 <pre style="font-size: 14px; font-family: source code pro; text-transform: none;">
 &lt;style&gt;
