--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <h4>note: vibra uI is only supported on chromium based browsers.</h4>
 <h1 id="req">Requirements</h1>
 <h2>Styles</h3>
-<pre style="font-size: 14px; font-family: source code pro; text-transform: none;">@import url(https://vibraui.netlify.app/api.css);</pre>
+<pre style="font-size: 14px; font-family: source code pro; text-transform: none;">@import url(https://shaurya1709.github.io/vibr-UI/api.css)</pre>
 <h2>configuration</h3>
 <pre style="font-size: 14px; font-family: source code pro; text-transform: none;">
 &lt;style&gt;
