--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <li><a href="addons.html">addons</a></li>	
 </ul>
 <h1>Introduction</h2>
-<p>vibra uI is a cSS only aPI allowing developers to create beautiful webApps faster and easier than ever for free!</p>
+<p>vibra uI is a cSS only aPI allowing developers to create beautiful webApps faster and easier than ever for free without any attribution needs!</p>
 <h1>advantages over other aPIs</h1>
 <p>for this comparison, we will compare vibra uI with React</p>
 <table>
@@ -28,7 +28,7 @@
 	</tr>
 	<tr>
 		<td>file size</td>
-		<td>7.57 kB (Including mobile styling)</td>
+		<td>7.58 kB. 5 kB minified (Including mobile styling)</td>
 		<td>11 kB</td>
 	</tr>
 	<tr>
@@ -38,16 +38,19 @@
 	</tr>
 	<tr>
 		<td>emoji</td>
-		<td>noto color emoji</td>
+		<td>noto color emoji. <a href="emoji.html">have a look at all the emoji here</a></td>
 		<td>browser default</td>
 	</tr>
 </table>
 <h4>note: vibra uI is only supported on chromium based browsers.</h4>
 <h1 id="req">Requirements</h1>
 <h2>Styles</h3>
-<pre style="font-size: 14px; font-family: source code pro; text-transform: none;">@import url(https://shaurya1709.github.io/vibr-UI/api.css)</pre>
-<h2>configuration</h3>
-<pre style="font-size: 14px; font-family: source code pro; text-transform: none;">
+<p>to import the minified version</p>
+<pre class="code">@import url(https://shaurya1709.github.io/vibra-UI/api.min.css)</pre>
+<p>to import the regular version</p>
+<pre class="code">@import url(https://shaurya1709.github.io/vibra-UI/api.css)</pre>
+<h2>configuration</h2>
+<pre class="code">
 &lt;style&gt;
 :root {
 	--main-color: /* the main color. used for things like backgrounds */
@@ -58,11 +61,6 @@
 }
 &lt;/style&gt;
 </pre>
-<p>visit our <a href="api.html">aPI documentation</a> to learn more</p>
-<h2>attribution</h2>
-<h4>Please read this section carefully</h4>
-<p>attribution is required for noto color emoji licensed under the apache license 2.0</p>
-
 <style>
 	@import url(style.css);
 </style>
