--- a/tests.html
+++ b/tests.html
@@ -39,4 +39,10 @@
 		transition: box-shadow 0.1s ease;
 		box-shadow:0 0 2px var(--accent-color);
 	}
+	
+	@media(hover: none) {
+		fieldset {
+			width: 100%;
+		}
+	}
 </style>
