--- a/404.html
+++ b/404.html
@@ -2,17 +2,18 @@
 <title>Vibra UI</title>
 <link rel="icon" href="icon.svg">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<h1 class="logo">Vibra uI</h1>
+<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI<h2 class="tagline">We make it easy.</h2></h1>
 <ul class="navbar glow sticky push">
   <li><a href="index.html">Home</a></li>
   <li><a href="api.html">API Documentation</a></li>
   <li><a href="design.html">design</a></li>	
   <li><a href="demo.html">Demos</a></li>
   <li><a href="credits.html">credits</a></li>
-  <li><a href="addons.html">addons</a></li>	
+  <li><a href="addons.html">Addons</a></li>	
+  <li><a href="https://github.com/shaurya1709/vibra-UI">github</a></li>	
 </ul>
-<h1 class="head">Error 404</h1>
-<h1>the page you were looking for was not found</h1>
+<h1 class="head">Oh Snap!</h1>
+<h1>The page you were looking for wasn't found on this server</h1>
 <style>
 	@import url(style.css)
 </style>
