--- a/addons.html
+++ b/addons.html
@@ -2,14 +2,15 @@
 <title>Vibra UI</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="icon.svg">
-<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
+<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI<h2 class="tagline">We make it easy.</h2></h1>
 <ul class="navbar sticky glow push">
   <li><a href="index.html">Home</a></li>
   <li><a href="api.html">API Documentation</a></li>
   <li><a href="design.html">design</a></li>
   <li><a href="demo.html">Demos</a></li>
   <li><a href="credits.html">credits</a></li>
-  <li><a id="active">addons</a></li>		
+  <li><a id="active">addons</a></li>
+  <li><a href="https://github.com/shaurya1709/vibra-UI">github</a></li>	
 </ul>
 
 <h1 class="head">addons</h1>
