--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <title>Vibra UI</title>
 <link rel="icon" href="icon.svg">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI<h2 class="tagline">We make it easy.</h2></h1>
+<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
 <ul class="navbar glow sticky push">
   <li><a href="index.html">Home</a></li>
   <li><a href="api.html">API Documentation</a></li>
