--- a/credits.html
+++ b/credits.html
@@ -9,16 +9,23 @@
   <li><a href="design.html">design</a></li>	
   <li><a href="demo.html">Demos</a></li>
   <li><a id="active">credits</a></li>
-  <li><a href="addons.html">addons</a></li>	
+  <li><a href="addons.html">addons</a></li>
+  <li><a href="https://github.com/shaurya1709/vibra-UI">github</a></li>	
 </ul>
 <div>
 <img style="float: right; height: 500px; width: 500px; transform: rotate(-5deg); outline: solid #555 2px;" src="credits_pic.jpeg">
 <h1 class="head" style="text-align: justify;">credits and contact</h1>
 <h1>shaurya singh - designer, programmer</h1>
-<h1 style="text-transform: none">Contact: shauryaville@gmail.com</h1>	
-</div>	
+<h1 style="text-transform: none">Contact: shauryaville@gmail.com</h1>
+</div>
 <style>
 	@import url(style.css);
 	
 	h1 {display: block;}
+	
+	@media (hover: none) {
+		img {
+			display: none;
+		}
+	}
 </style>
