--- a/demo.html
+++ b/demo.html
@@ -1,105 +1,31 @@
 <!DOCTYPE html>
 <title>Vibra UI</title>
 <link rel="icon" href="icon.svg">
-<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta charset="utf-8">
+<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
 <ul class="navbar glow sticky push">
   <li><a href="index.html">Home</a></li>
   <li><a href="api.html">API Documentation</a></li>
   <li><a href="design.html">design</a></li>	
-  <li><a id="active">Demos</a></li>
-  <li><a href="credits.html">credits</a></li>
-  <li><a href="addons.html">addons</a></li>	
+  <li><a href="demo.html">Demos</a></li>
+  <li><a id="active">credits</a></li>
+  <li><a href="addons.html">addons</a></li>
+  <li><a href="https://github.com/shaurya1709/vibra-UI">github</a></li>	
 </ul>
-<h1 class="head">demos</h1>
-<h1>classes</h1>
-<h2 id="navbar-demo">navbar</h2>
-<ul class="navbar">
-	<li><a>Page 1</a></li>
-	<li><a id="active">Page 2</a></li>
-</ul>
-<p>source code:</p>
-<pre class="code">
-&lt;ul class="navbar"&gt;
-	&lt;li&gt;&lt;a&gt;Page 1&lt;/a&gt;&lt;/li&gt;
-	&lt;li>&lt;a id="active">Page 2&lt;/a>&lt;/li>
-&lt;/ul>
-</pre>
-<h1>class pairs</h1>
-<h2>glow</h2>
-<h3>button</h3>
-<button class="glow">button</button>
-<p>source code:</p>
-<pre class="code">
-&lt;button class="glow">button&lt;/button>
-</pre>
-<h3>navbar</h3>
-<ul class="navbar glow">
-	<li><a>Page 1</a></li>
-	<li><a id="active">Page 2</a></li>
-</ul>
-<p>source code:</p>
-<pre class="code">
-&lt;ul class="navbar glow"&gt;
-	&lt;li&gt;&lt;a&gt;Page 1&lt;/a&gt;&lt;/li&gt;
-	&lt;li>&lt;a id="active">Page 2&lt;/a>&lt;/li>
-&lt;/ul>
-</pre>
-<h2>push</h2>
-<h3>button</h3>
-<button class="push">button</button>
-<p>source code:</p>
-<pre class="code">
-&lt;button class="push">button&lt;/button>
-</pre>
-<h3>navbar</h3>
-<ul class="navbar push">
-	<li><a>Page 1</a></li>
-	<li><a id="active">Page 2</a></li>
-</ul>
-<p>source code:</p>
-<pre class="code">
-&lt;ul class="navbar push"&gt;
-	&lt;li&gt;&lt;a&gt;Page 1&lt;/a&gt;&lt;/li&gt;
-	&lt;li>&lt;a id="active">Page 2&lt;/a>&lt;/li>
-&lt;/ul>
-</pre>
-<h2 id="ccp">combining class pairs</h2>
-<p>a navbar with classes glow and push</p>
-<ul class="navbar glow push">
-	<li><a>Page 1</a></li>
-	<li><a id="active">Page 2</a></li>
-</ul>
-<p>source code:</p>
-<pre class="code">
-&lt;ul class="navbar glow push"&gt;
-	&lt;li&gt;&lt;a&gt;Page 1&lt;/a&gt;&lt;/li&gt;
-	&lt;li>&lt;a id="active">Page 2&lt;/a>&lt;/li>
-&lt;/ul>
-</pre>
-<h1>animations</h1>
-<h2>spin</h2>
-<button class="animation spin slow infinite">i spin!</button>
-<p>Source Code</p>
-<pre class="code">
-&lt;button class="animation spin slow infinite">i spin!&lt;/button>
-</pre>
-<h2>fadeback</h2>
-<p class="animation fadeback slow infinite">i fade in and out</p>
-<p>Source Code</p>
-<pre class="code">
-&lt;p class="animation fadeback slow infinite">i fade in and out&lt;/button>
-</pre>
-<h1 id="emoji">emoji</h1>
-<h2>Noto Color Emoji</h2>
-<p>hi! 😀</p>
-<p>noto color emoji supports all the latest emojis from android 12</p>
-<h2>device default</h2>
-<p style="font-family: sans-serif">hi! 😀</p>
-
+<div>
+<img style="float: right; height: 500px; width: 500px; transform: rotate(-5deg); outline: solid #555 2px;" src="credits_pic.jpeg">
+<h1 class="head" style="text-align: justify;">credits and contact</h1>
+<h1>shaurya singh - designer, programmer</h1>
+<h1 style="text-transform: none">Contact: shauryaville@gmail.com</h1>
+</div>
 <style>
 	@import url(style.css);
 	
-	.code {font-family: source code pro; font-size: 14px; text-transform: none;}	
+	h1 {display: block;}
+	
+	@media (hover: none) {
+		img {
+			display: none;
+		}
+	}
 </style>
