--- a/design.html
+++ b/design.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <title>Vibra UI</title>
-<link rel="icon" href="icon.svg">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
-
+<link rel="icon" href="icon.svg">
 <h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
 <ul class="navbar sticky glow push">
   <li><a href="index.html">Home</a></li>
@@ -11,7 +10,8 @@
   <li><a id="active">design</a></li>	
   <li><a href="demo.html">Demos</a></li>
   <li><a href="credits.html">credits</a></li>
-  <li><a href="addons.html">addons</a></li>	
+  <li><a href="addons.html">addons</a></li>
+  <li><a href="https://github.com/shaurya1709/vibra-UI">github</a></li>	
 </ul>
 <h1 class="head">design</h1>
 <h1>typography</h1>
@@ -58,7 +58,6 @@ Donec pulvinar sem nec ipsum tempus, eget dapibus felis vehicula. Quisque commod
 <p>icons should be easy to grasp and understand. vibra uI uses icons by the jam icons project. <a href="https://jam-icons.com">click here to have a look</a>. <a href="https://github.com/michaelampr/jam">check out the github repository.</a> Example:</p>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="-5 -5 24 24" width="24" height="24" preserveAspectRatio="xMinYMin" class="icon__icon"><path d="M8 6.641l1.121-1.12a1 1 0 0 1 1.415 1.413L7.707 9.763a.997.997 0 0 1-1.414 0L3.464 6.934A1 1 0 1 1 4.88 5.52L6 6.641V1a1 1 0 1 1 2 0v5.641zM1 12h12a1 1 0 0 1 0 2H1a1 1 0 0 1 0-2z"></path>
 <p>this is the download icon</p>	
-
 <style>
 	@import url(style.css);
 </style>
