--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <title>Vibra UI</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="icon.svg">
+<style>@import url(style.css);</style>
 <h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
 <ul class="navbar glow sticky push">
   <li><a id="active">Home</a></li>
@@ -10,39 +11,17 @@
   <li><a href="demo.html">Demos</a></li>
   <li><a href="credits.html">credits</a></li>
   <li><a href="addons.html">addons</a></li>	
+  <li><a href="https://github.com/shaurya1709/vibra-UI">github</a></li>	
 </ul>
-<h1>Introduction</h2>
-<p>vibra uI is a cSS only aPI allowing developers to create beautiful webApps faster and easier than ever for free without any attribution needs!</p>
-<h1>advantages over other aPIs</h1>
-<p>for this comparison, we will compare vibra uI with React</p>
-<table>
-	<tr>
-		<th>topic</th>
-		<th>vibra uI 1 release candidate 1</th>
-		<th>react 17</th>
-	</tr>
-	<tr>
-		<td>setup</td>
-		<td>add the css file via the @import query</td>
-		<td>import 2 scripts</td>
-	</tr>
-	<tr>
-		<td>file size</td>
-		<td>7.58 kB. 5 kB minified (Including mobile styling)</td>
-		<td>11 kB</td>
-	</tr>
-	<tr>
-		<td>configuration</td>
-		<td>cSS-based</td>
-		<td>javaScript-based</td>
-	</tr>
-	<tr>
-		<td>emoji</td>
-		<td>noto color emoji. <a href="emoji.html">have a look at all the emoji here</a></td>
-		<td>browser default</td>
-	</tr>
-</table>
+<h1>What is vibra uI</h1>
+<p>vibra uI is a uI framework built on pure cSS allowing developers to create beautiful webapps. vibra uI is licensed under the <a href="https://github.com/shaurya1709/vibra-UI/blob/main/LICENSE.md">vibra public use license</a></p>
 <h4>note: vibra uI is only supported on chromium based browsers.</h4>
+<h1>why vibra uI</h1>
+<p>now you might be wondering what makes vibra uI different? well, it is its structure. here are a few advantages of vibra uI:</p>
+<ul>
+	<li>as vibra uI is based on cSS, it loads faster than react, angular or vue</li>
+	<li>emojis are consistent across platforms.(some emojis have a day and night difference across platforms)</li>
+</ul>
 <h1 id="req">Requirements</h1>
 <h2>Styles</h3>
 <p>to import the minified version</p>
@@ -61,6 +40,3 @@
 }
 &lt;/style&gt;
 </pre>
-<style>
-	@import url(style.css);
-</style>
